Add fixed left sidebar banner and improve hero typography

--- a/opportunities.html
+++ b/opportunities.html
@@ -18,150 +18,160 @@
 </head>
 
 <body>
+    <!-- Fixed Left Banner -->
+    <div class="left-banner"></div>
 
-    <header>
-        <div class="container">
-            <a href="about.html" class="site-branding">
-                <img src="assets/images/logos/CISL_Logo_Circle_Tranparent.png" alt="" class="site-icon">
-                <span class="site-title">Constrained Image-Synthesis Lab</span>
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="people.html">People</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="research.html">Research Interests</a></li>
-                    <li><a href="opportunities.html" class="active">Opportunities</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Hero Strip below header -->
-    <div class="hero-strip"></div>
-
-    <main class="page-content">
-        <div class="container">
-            <h1>Opportunities</h1>
-
-            <p class="section-intro">
-                We are opening inductions to anyone who finds this project interesting and is excited to collaborate and
-                learn!
-            </p>
-
-            <!-- DMFP Research Fellow Position -->
-            <div class="opportunity-card">
-                <h3>Research Fellow — DMFP Project</h3>
-
-                <p>
-                    We are a team of researchers working to build a generative modelling pipeline for design. This
-                    project explores diffusion/GAN architectures, raster→vector/hybrid image conversion, and prototyping
-                    with the eventual goal of using image-generative models to model industrial and consumer design
-                    practices.
-                </p>
-
-                <h4>Preferred Background</h4>
-                <p>
-                    CS/ML/AI/Math; Advanced UGs and higher preferred. General familiarity with basic ML theory is
-                    expected. Familiarity with image-generation, conversion, or compression algorithms would be
-                    exceptional (although not necessary). Python + PyTorch/TensorFlow is a plus (we'll support
-                    skill-building).
-                </p>
-
-                <p>
-                    <em>The field seems a little niche, but the team will help you learn in whatever manner we can (it
-                        was and is a learning process for us too!), so please don't hesitate to apply.</em>
-                </p>
-
-                <h4>Commitment</h4>
-                <p>
-                    Around 8–14 hrs/week, perhaps one weekly meeting + 1–2 additional syncs as needed.
-                </p>
-
-                <h4>What You'll Gain</h4>
-                <ul>
-                    <li>Hands-on modelling experience</li>
-                    <li>Industry-aligned problem-solving</li>
-                    <li>Lots of reading and brainstorming</li>
-                    <li>Potential authorship</li>
-                    <li>Portfolio-worthy work</li>
-                </ul>
-
-                <div class="screening-questions">
-                    <h4>Screening Questions</h4>
-                    <ol>
-                        <li>
-                            We must fill this position urgently. Can you start immediately?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            Have you completed the following level of education: Bachelor's Degree?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            What is your level of proficiency in English?
-                            <div class="ideal-answer">Ideal answer: Professional</div>
-                        </li>
-                        <li>
-                            If you haven't completed your bachelor's, which year are you in currently?
-                            <div class="ideal-answer">Ideal answer: 4</div>
-                        </li>
-                        <li>
-                            Do you have experience with any of the following? (PyTorch, TensorFlow, Stable Diffusion /
-                            Hugging Face Diffusers, OpenCV) <em>(Non-prerequisite)</em>
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            Are you comfortable working in a remote setting, and do you understand that this is an
-                            unpaid position?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            Do you often find yourself glancing through AI/ML/DL research papers?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            How many hours per week can you contribute to this project?
-                            <div class="ideal-answer">Ideal answer: 10</div>
-                        </li>
-                    </ol>
-                </div>
-
-                <div style="margin-top: var(--space-xl);">
-                    <a href="DMFP_Research_Fellow_Position.txt" download class="download-btn">Download Job
-                        Description</a>
-                </div>
+    <!-- Site Content Wrapper -->
+    <div class="site-wrapper">
+        <header>
+            <div class="container">
+                <a href="about.html" class="site-branding">
+                    <img src="assets/images/logos/CISL_Logo_Circle_Tranparent.png" alt="" class="site-icon">
+                    <span class="site-title">Constrained Image-Synthesis Lab</span>
+                </a>
+                <nav>
+                    <ul>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="people.html">People</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="research.html">Research Interests</a></li>
+                        <li><a href="opportunities.html" class="active">Opportunities</a></li>
+                    </ul>
+                </nav>
             </div>
+        </header>
 
-            <h2>How to Apply</h2>
+        <!-- Hero Strip below header -->
+        <div class="hero-strip"></div>
 
-            <p>
-                Send a brief note (1 paragraph) and CV to:<br>
-                <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a> or
-                <a href="mailto:poorvarpatel@gmail.com">poorvarpatel@gmail.com</a>
-            </p>
+        <main class="page-content">
+            <div class="container">
+                <h1>Opportunities</h1>
 
-            <p style="color: var(--color-text-muted); font-size: var(--font-size-sm);">
-                Include "CISL Research Fellow — DMFP" in the subject line.
-            </p>
+                <p class="section-intro">
+                    We are opening inductions to anyone who finds this project interesting and is excited to collaborate
+                    and
+                    learn!
+                </p>
 
-        </div>
-    </main>
+                <!-- DMFP Research Fellow Position -->
+                <div class="opportunity-card">
+                    <h3>Research Fellow — DMFP Project</h3>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
-                    <p>© 2025 Constrained Image-Synthesis Lab</p>
                     <p>
-                        <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank" rel="noopener">LinkedIn</a>
-                        <span style="margin: 0 0.5rem; opacity: 0.5;">·</span>
-                        <a href="contact.html">Contact</a>
+                        We are a team of researchers working to build a generative modelling pipeline for design. This
+                        project explores diffusion/GAN architectures, raster→vector/hybrid image conversion, and
+                        prototyping
+                        with the eventual goal of using image-generative models to model industrial and consumer design
+                        practices.
                     </p>
+
+                    <h4>Preferred Background</h4>
+                    <p>
+                        CS/ML/AI/Math; Advanced UGs and higher preferred. General familiarity with basic ML theory is
+                        expected. Familiarity with image-generation, conversion, or compression algorithms would be
+                        exceptional (although not necessary). Python + PyTorch/TensorFlow is a plus (we'll support
+                        skill-building).
+                    </p>
+
+                    <p>
+                        <em>The field seems a little niche, but the team will help you learn in whatever manner we can
+                            (it
+                            was and is a learning process for us too!), so please don't hesitate to apply.</em>
+                    </p>
+
+                    <h4>Commitment</h4>
+                    <p>
+                        Around 8–14 hrs/week, perhaps one weekly meeting + 1–2 additional syncs as needed.
+                    </p>
+
+                    <h4>What You'll Gain</h4>
+                    <ul>
+                        <li>Hands-on modelling experience</li>
+                        <li>Industry-aligned problem-solving</li>
+                        <li>Lots of reading and brainstorming</li>
+                        <li>Potential authorship</li>
+                        <li>Portfolio-worthy work</li>
+                    </ul>
+
+                    <div class="screening-questions">
+                        <h4>Screening Questions</h4>
+                        <ol>
+                            <li>
+                                We must fill this position urgently. Can you start immediately?
+                                <div class="ideal-answer">Ideal answer: Yes</div>
+                            </li>
+                            <li>
+                                Have you completed the following level of education: Bachelor's Degree?
+                                <div class="ideal-answer">Ideal answer: Yes</div>
+                            </li>
+                            <li>
+                                What is your level of proficiency in English?
+                                <div class="ideal-answer">Ideal answer: Professional</div>
+                            </li>
+                            <li>
+                                If you haven't completed your bachelor's, which year are you in currently?
+                                <div class="ideal-answer">Ideal answer: 4</div>
+                            </li>
+                            <li>
+                                Do you have experience with any of the following? (PyTorch, TensorFlow, Stable Diffusion
+                                /
+                                Hugging Face Diffusers, OpenCV) <em>(Non-prerequisite)</em>
+                                <div class="ideal-answer">Ideal answer: Yes</div>
+                            </li>
+                            <li>
+                                Are you comfortable working in a remote setting, and do you understand that this is an
+                                unpaid position?
+                                <div class="ideal-answer">Ideal answer: Yes</div>
+                            </li>
+                            <li>
+                                Do you often find yourself glancing through AI/ML/DL research papers?
+                                <div class="ideal-answer">Ideal answer: Yes</div>
+                            </li>
+                            <li>
+                                How many hours per week can you contribute to this project?
+                                <div class="ideal-answer">Ideal answer: 10</div>
+                            </li>
+                        </ol>
+                    </div>
+
+                    <div style="margin-top: var(--space-xl);">
+                        <a href="DMFP_Research_Fellow_Position.txt" download class="download-btn">Download Job
+                            Description</a>
+                    </div>
+                </div>
+
+                <h2>How to Apply</h2>
+
+                <p>
+                    Send a brief note (1 paragraph) and CV to:<br>
+                    <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a> or
+                    <a href="mailto:poorvarpatel@gmail.com">poorvarpatel@gmail.com</a>
+                </p>
+
+                <p style="color: var(--color-text-muted); font-size: var(--font-size-sm);">
+                    Include "CISL Research Fellow — DMFP" in the subject line.
+                </p>
+
+            </div>
+        </main>
+
+        <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-info">
+                        <p>© 2025 Constrained Image-Synthesis Lab</p>
+                        <p>
+                            <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank"
+                                rel="noopener">LinkedIn</a>
+                            <span style="margin: 0 0.5rem; opacity: 0.5;">·</span>
+                            <a href="contact.html">Contact</a>
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 
 </body>
 
