--- a/people.html
+++ b/people.html
@@ -17,136 +17,143 @@
 </head>
 
 <body>
+    <!-- Fixed Left Banner -->
+    <div class="left-banner"></div>
 
-    <header>
-        <div class="container">
-            <a href="about.html" class="site-branding">
-                <img src="assets/images/logos/CISL_Logo_Circle_Tranparent.png" alt="" class="site-icon">
-                <span class="site-title">Constrained Image-Synthesis Lab</span>
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="people.html" class="active">People</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="research.html">Research Interests</a></li>
-                    <li><a href="opportunities.html">Opportunities</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Site Content Wrapper -->
+    <div class="site-wrapper">
+        <header>
+            <div class="container">
+                <a href="about.html" class="site-branding">
+                    <img src="assets/images/logos/CISL_Logo_Circle_Tranparent.png" alt="" class="site-icon">
+                    <span class="site-title">Constrained Image-Synthesis Lab</span>
+                </a>
+                <nav>
+                    <ul>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="people.html" class="active">People</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="research.html">Research Interests</a></li>
+                        <li><a href="opportunities.html">Opportunities</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <!-- Hero Strip below header -->
-    <div class="hero-strip"></div>
+        <!-- Hero Strip below header -->
+        <div class="hero-strip"></div>
 
-    <main class="page-content">
-        <div class="container">
-            <h1 class="fade-in">People</h1>
+        <main class="page-content">
+            <div class="container">
+                <h1 class="fade-in">People</h1>
 
-            <!-- Research Leads -->
-            <section class="people-section fade-in">
-                <h2>Research Leads</h2>
+                <!-- Research Leads -->
+                <section class="people-section fade-in">
+                    <h2>Research Leads</h2>
 
-                <div class="people-grid people-grid--leads">
-                    <div class="person person--lead card-accent">
-                        <img src="assets/images/headshots/AngadAhuja_HeadShot.jpeg" alt="Angad Singh Ahuja"
-                            class="person__photo">
-                        <div class="person__name">Angad Singh Ahuja</div>
-                        <div class="person__role">Research Lead</div>
-                        <div class="person__keywords">RobustSep</div>
+                    <div class="people-grid people-grid--leads">
+                        <div class="person person--lead card-accent">
+                            <img src="assets/images/headshots/AngadAhuja_HeadShot.jpeg" alt="Angad Singh Ahuja"
+                                class="person__photo">
+                            <div class="person__name">Angad Singh Ahuja</div>
+                            <div class="person__role">Research Lead</div>
+                            <div class="person__keywords">RobustSep</div>
+                        </div>
+
+                        <div class="person person--lead card-accent">
+                            <img src="assets/images/headshots/PoorvaPatel_HeadShot.jpeg" alt="Poorva Patel"
+                                class="person__photo">
+                            <div class="person__name">Poorva Patel</div>
+                            <div class="person__role">Research Lead</div>
+                            <div class="person__keywords">Deep Reinforcement Learning Halftoning, Colour Perception
+                                Preservation</div>
+                        </div>
                     </div>
+                </section>
 
-                    <div class="person person--lead card-accent">
-                        <img src="assets/images/headshots/PoorvaPatel_HeadShot.jpeg" alt="Poorva Patel"
-                            class="person__photo">
-                        <div class="person__name">Poorva Patel</div>
-                        <div class="person__role">Research Lead</div>
-                        <div class="person__keywords">Deep Reinforcement Learning Halftoning, Colour Perception
-                            Preservation</div>
+                <hr class="section-divider section-divider--gradient">
+
+                <!-- Research Fellows -->
+                <section class="people-section fade-in">
+                    <h2>Research Fellows</h2>
+
+                    <div class="people-grid people-grid--fellows">
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/AarushRamAnandh_HeadShot.jpeg" alt="Aarush Ram Anandh"
+                                class="person__photo">
+                            <div class="person__name">Aarush Ram Anandh</div>
+                            <div class="person__keywords">Ashoka University · Colour Perception Preservation</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/SahilpreetKaurGill_Headshot.png"
+                                alt="Sahilpreet Kaur Gill" class="person__photo">
+                            <div class="person__name">Sahilpreet Kaur Gill</div>
+                            <div class="person__keywords">Miranda House, DU · Deep RL Halftoning</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/PranjalWala_Headshot.png" alt="Pranjal Wala"
+                                class="person__photo">
+                            <div class="person__name">Pranjal Wala</div>
+                            <div class="person__keywords">Miranda House · RobustSep</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/RushabhLodha_HeadShot.png" alt="Rushabh Lodha"
+                                class="person__photo">
+                            <div class="person__name">Rushabh Lodha</div>
+                            <div class="person__keywords">IIT Mandi · RobustSep</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/YashviPrem_Headshot.jpg" alt="Yashvi Prem"
+                                class="person__photo">
+                            <div class="person__name">Yashvi Prem</div>
+                            <div class="person__keywords">Miranda House · Deep RL Halftoning</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/SoumiPal_HeadShot.png" alt="Soumi Pal"
+                                class="person__photo">
+                            <div class="person__name">Soumi Pal</div>
+                            <div class="person__keywords">BITS Pilani · Deep RL Halftoning</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/ShreeyaSrivastava_HeadShot.jpg" alt="Shreeya Srivastava"
+                                class="person__photo">
+                            <div class="person__name">Shreeya Srivastava</div>
+                            <div class="person__keywords">Manipal Institute of Technology · RobustSep</div>
+                        </div>
+
+                        <div class="person person--fellow card-accent">
+                            <img src="assets/images/headshots/VishwajeetDaspute_Headshot.jpeg" alt="Vishwajeet Daspute"
+                                class="person__photo">
+                            <div class="person__name">Vishwajeet Daspute</div>
+                            <div class="person__keywords">VIT, Pune · RobustSep</div>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
+        </main>
 
-            <hr class="section-divider section-divider--gradient">
-
-            <!-- Research Fellows -->
-            <section class="people-section fade-in">
-                <h2>Research Fellows</h2>
-
-                <div class="people-grid people-grid--fellows">
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/AarushRamAnandh_HeadShot.jpeg" alt="Aarush Ram Anandh"
-                            class="person__photo">
-                        <div class="person__name">Aarush Ram Anandh</div>
-                        <div class="person__keywords">Ashoka University · Colour Perception Preservation</div>
+        <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-info">
+                        <p>© 2025 Constrained Image-Synthesis Lab</p>
+                        <p>
+                            <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank"
+                                rel="noopener">LinkedIn</a>
+                            <span style="margin: 0 0.5rem; opacity: 0.5;">·</span>
+                            <a href="contact.html">Contact</a>
+                        </p>
                     </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/SahilpreetKaurGill_Headshot.png" alt="Sahilpreet Kaur Gill"
-                            class="person__photo">
-                        <div class="person__name">Sahilpreet Kaur Gill</div>
-                        <div class="person__keywords">Miranda House, DU · Deep RL Halftoning</div>
-                    </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/PranjalWala_Headshot.png" alt="Pranjal Wala"
-                            class="person__photo">
-                        <div class="person__name">Pranjal Wala</div>
-                        <div class="person__keywords">Miranda House · RobustSep</div>
-                    </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/RushabhLodha_HeadShot.png" alt="Rushabh Lodha"
-                            class="person__photo">
-                        <div class="person__name">Rushabh Lodha</div>
-                        <div class="person__keywords">IIT Mandi · RobustSep</div>
-                    </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/YashviPrem_Headshot.jpg" alt="Yashvi Prem"
-                            class="person__photo">
-                        <div class="person__name">Yashvi Prem</div>
-                        <div class="person__keywords">Miranda House · Deep RL Halftoning</div>
-                    </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/SoumiPal_HeadShot.png" alt="Soumi Pal" class="person__photo">
-                        <div class="person__name">Soumi Pal</div>
-                        <div class="person__keywords">BITS Pilani · Deep RL Halftoning</div>
-                    </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/ShreeyaSrivastava_HeadShot.jpg" alt="Shreeya Srivastava"
-                            class="person__photo">
-                        <div class="person__name">Shreeya Srivastava</div>
-                        <div class="person__keywords">Manipal Institute of Technology · RobustSep</div>
-                    </div>
-
-                    <div class="person person--fellow card-accent">
-                        <img src="assets/images/headshots/VishwajeetDaspute_Headshot.jpeg" alt="Vishwajeet Daspute"
-                            class="person__photo">
-                        <div class="person__name">Vishwajeet Daspute</div>
-                        <div class="person__keywords">VIT, Pune · RobustSep</div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
-                    <p>© 2025 Constrained Image-Synthesis Lab</p>
-                    <p>
-                        <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank" rel="noopener">LinkedIn</a>
-                        <span style="margin: 0 0.5rem; opacity: 0.5;">·</span>
-                        <a href="contact.html">Contact</a>
-                    </p>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 
 </body>
 
