--- a/contact.html
+++ b/contact.html
@@ -18,39 +18,44 @@
 </head>
 
 <body>
+    <!-- Fixed Left Banner -->
+    <div class="left-banner"></div>
 
-    <header>
-        <div class="container">
-            <a href="about.html" class="site-branding">
-                <img src="assets/images/logos/CISL_Logo_Circle_Tranparent.png" alt="" class="site-icon">
-                <span class="site-title">Constrained Image-Synthesis Lab</span>
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="people.html">People</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="research.html">Research Interests</a></li>
-                    <li><a href="opportunities.html">Opportunities</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Site Content Wrapper -->
+    <div class="site-wrapper">
+        <header>
+            <div class="container">
+                <a href="about.html" class="site-branding">
+                    <img src="assets/images/logos/CISL_Logo_Circle_Tranparent.png" alt="" class="site-icon">
+                    <span class="site-title">Constrained Image-Synthesis Lab</span>
+                </a>
+                <nav>
+                    <ul>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="people.html">People</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="research.html">Research Interests</a></li>
+                        <li><a href="opportunities.html">Opportunities</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <!-- Hero Strip below header -->
-    <div class="hero-strip"></div>
+        <!-- Hero Strip below header -->
+        <div class="hero-strip"></div>
 
-    <main class="page-content">
-        <div class="container">
-            <h1 class="fade-in">Contact Us</h1>
+        <main class="page-content">
+            <div class="container">
+                <h1 class="fade-in">Contact Us</h1>
 
-            <p class="section-intro fade-in">
-                We welcome inquiries about collaborations, research opportunities, and general questions about our work.
-            </p>
+                <p class="section-intro fade-in">
+                    We welcome inquiries about collaborations, research opportunities, and general questions about our
+                    work.
+                </p>
 
-            <div class="contact-layout fade-in">
-                <div class="google-form-container">
-                    <!-- 
+                <div class="contact-layout fade-in">
+                    <div class="google-form-container">
+                        <!-- 
                     =====================================================
                     HOW TO SET UP YOUR GOOGLE FORM:
                     =====================================================
@@ -76,58 +81,62 @@
                     =====================================================
                     -->
 
-                    <!-- Google Form Embed -->
-                    <iframe
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSendvlbhQHyCpiFhWlgJAs2geEsTq2JKW74CCvxsPfJ7ab-NQ/viewform?embedded=true"
-                        width="100%" height="1282" frameborder="0" marginheight="0" marginwidth="0"
-                        title="Contact Form">
-                        Loading…
-                    </iframe>
+                        <!-- Google Form Embed -->
+                        <iframe
+                            src="https://docs.google.com/forms/d/e/1FAIpQLSendvlbhQHyCpiFhWlgJAs2geEsTq2JKW74CCvxsPfJ7ab-NQ/viewform?embedded=true"
+                            width="100%" height="1282" frameborder="0" marginheight="0" marginwidth="0"
+                            title="Contact Form">
+                            Loading…
+                        </iframe>
 
-                    <!-- Fallback message shown if iframe doesn't load -->
-                    <noscript>
-                        <p>Please enable JavaScript to use our contact form, or email us directly at
+                        <!-- Fallback message shown if iframe doesn't load -->
+                        <noscript>
+                            <p>Please enable JavaScript to use our contact form, or email us directly at
+                                <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a>
+                            </p>
+                        </noscript>
+                    </div>
+
+                    <aside class="contact-info">
+                        <h3>Direct Contact</h3>
+                        <p>
+                            <strong>Email:</strong><br>
                             <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a>
                         </p>
-                    </noscript>
-                </div>
 
-                <aside class="contact-info">
-                    <h3>Direct Contact</h3>
-                    <p>
-                        <strong>Email:</strong><br>
-                        <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a>
-                    </p>
+                        <h3>Connect</h3>
+                        <p>
+                            <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank"
+                                rel="noopener">LinkedIn</a>
+                        </p>
 
-                    <h3>Connect</h3>
-                    <p>
-                        <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank" rel="noopener">LinkedIn</a>
-                    </p>
+                        <h3>Response Time</h3>
+                        <p>We typically respond within 2-3 business days.</p>
 
-                    <h3>Response Time</h3>
-                    <p>We typically respond within 2-3 business days.</p>
-
-                    <h3>For Job Applications</h3>
-                    <p>Please visit our <a href="opportunities.html">Opportunities</a> page for current openings.</p>
-                </aside>
-            </div>
-        </div>
-    </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
-                    <p>© 2025 Constrained Image-Synthesis Lab</p>
-                    <p>
-                        <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank" rel="noopener">LinkedIn</a>
-                        <span style="margin: 0 0.5rem; opacity: 0.5;">·</span>
-                        <a href="contact.html">Contact</a>
-                    </p>
+                        <h3>For Job Applications</h3>
+                        <p>Please visit our <a href="opportunities.html">Opportunities</a> page for current openings.
+                        </p>
+                    </aside>
                 </div>
             </div>
-        </div>
-    </footer>
+        </main>
+
+        <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-info">
+                        <p>© 2025 Constrained Image-Synthesis Lab</p>
+                        <p>
+                            <a href="https://www.linkedin.com/company/ci-s-lab/" target="_blank"
+                                rel="noopener">LinkedIn</a>
+                            <span style="margin: 0 0.5rem; opacity: 0.5;">·</span>
+                            <a href="contact.html">Contact</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
 
 </body>
 
