--- a/opportunities.html
+++ b/opportunities.html
@@ -55,84 +55,62 @@
                 <h3>Research Fellow — DMFP Project</h3>
 
                 <p>
-                    We are a team of researchers working to build a generative modelling pipeline for design. This
-                    project explores diffusion/GAN architectures, raster→vector/hybrid image conversion, and
-                    prototyping
-                    with the eventual goal of using image-generative models to model industrial and consumer design
-                    practices.
+                    The DMFP (Diffusion Modelling for Print) project is developing a generative modelling pipeline
+                    for industrial and consumer design applications. Our research explores diffusion and GAN
+                    architectures,
+                    raster-to-vector conversion techniques, and hybrid image representations — with the goal of
+                    creating physically-constrained image synthesis systems suitable for professional design workflows.
                 </p>
 
                 <h4>Preferred Background</h4>
                 <p>
-                    CS/ML/AI/Math; Advanced UGs and higher preferred. General familiarity with basic ML theory is
-                    expected. Familiarity with image-generation, conversion, or compression algorithms would be
-                    exceptional (although not necessary). Python + PyTorch/TensorFlow is a plus (we'll support
-                    skill-building).
+                    We welcome applicants with backgrounds in Computer Science, Machine Learning, Artificial
+                    Intelligence,
+                    or Mathematics. Advanced undergraduates (final year) and postgraduate students are preferred.
+                    Candidates
+                    should have foundational knowledge of machine learning theory. Experience with image generation,
+                    conversion, or compression algorithms is advantageous but not required. Proficiency in Python with
+                    PyTorch or TensorFlow is beneficial — we provide mentorship for skill development.
                 </p>
 
                 <p>
-                    <em>The field seems a little niche, but the team will help you learn in whatever manner we can
-                        (it
-                        was and is a learning process for us too!), so please don't hesitate to apply.</em>
+                    <em>While the research area may seem specialised, our team is committed to supporting your learning
+                        journey. We encourage applications from motivated candidates eager to explore this field.</em>
                 </p>
 
-                <h4>Commitment</h4>
+                <h4>Time Commitment</h4>
                 <p>
-                    Around 8–14 hrs/week, perhaps one weekly meeting + 1–2 additional syncs as needed.
+                    Approximately 8–14 hours per week, including one weekly team meeting and 1–2 additional
+                    synchronisation calls as required.
                 </p>
 
                 <h4>What You'll Gain</h4>
                 <ul>
-                    <li>Hands-on modelling experience</li>
-                    <li>Industry-aligned problem-solving</li>
-                    <li>Lots of reading and brainstorming</li>
-                    <li>Potential authorship</li>
-                    <li>Portfolio-worthy work</li>
+                    <li>Practical experience with state-of-the-art generative models</li>
+                    <li>Exposure to industry-aligned research challenges</li>
+                    <li>Collaborative reading groups and technical discussions</li>
+                    <li>Potential co-authorship on publications</li>
+                    <li>Portfolio-quality research contributions</li>
                 </ul>
 
                 <div class="screening-questions">
                     <h4>Screening Questions</h4>
                     <ol>
-                        <li>
-                            We must fill this position urgently. Can you start immediately?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            Have you completed the following level of education: Bachelor's Degree?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            What is your level of proficiency in English?
-                            <div class="ideal-answer">Ideal answer: Professional</div>
-                        </li>
-                        <li>
-                            If you haven't completed your bachelor's, which year are you in currently?
-                            <div class="ideal-answer">Ideal answer: 4</div>
-                        </li>
-                        <li>
-                            Do you have experience with any of the following? (PyTorch, TensorFlow, Stable Diffusion
-                            /
-                            Hugging Face Diffusers, OpenCV) <em>(Non-prerequisite)</em>
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            Are you comfortable working in a remote setting, and do you understand that this is an
-                            unpaid position?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            Do you often find yourself glancing through AI/ML/DL research papers?
-                            <div class="ideal-answer">Ideal answer: Yes</div>
-                        </li>
-                        <li>
-                            How many hours per week can you contribute to this project?
-                            <div class="ideal-answer">Ideal answer: 10</div>
-                        </li>
+                        <li>We must fill this position urgently. Can you start immediately?</li>
+                        <li>Have you completed the following level of education: Bachelor's Degree?</li>
+                        <li>What is your level of proficiency in English?</li>
+                        <li>If you haven't completed your bachelor's, which year are you in currently?</li>
+                        <li>Do you have experience with any of the following? (PyTorch, TensorFlow, Stable Diffusion /
+                            Hugging Face Diffusers, OpenCV) <em>(Non-prerequisite)</em></li>
+                        <li>Are you comfortable working in a remote setting, and do you understand that this is an
+                            unpaid research position?</li>
+                        <li>Do you regularly engage with AI/ML/DL research literature?</li>
+                        <li>How many hours per week can you contribute to this project?</li>
                     </ol>
                 </div>
 
                 <div style="margin-top: var(--space-xl);">
-                    <a href="DMFP_Research_Fellow_Position.txt" download class="download-btn">Download Job
+                    <a href="assets/docs/JobDecription_RA_DMFP.pdf" download class="download-btn">Download Job
                         Description</a>
                 </div>
             </div>
