Update research interests on about page - technical summaries from research.html

--- a/about.html
+++ b/about.html
@@ -76,18 +76,16 @@
                     <h2 class="fade-in">Research Interests</h2>
 
                     <ul class="fade-in">
-                        <li><strong>Physical and process constraints</strong> — ink limits, halftone frequencies,
-                            print
-                            gamut bounds, substrate compatibility</li>
-                        <li><strong>Semantic and structural constraints</strong> — geometry preservation,
-                            perspective
-                            consistency, ROI fidelity, compositional invariants</li>
-                        <li><strong>Safety constraints</strong> — adversarial robustness, failure detection,
-                            decision
-                            traceability, output verification</li>
-                        <li><strong>Compute constraints</strong> — inference budgets, latency bounds, edge
-                            deployment
-                            requirements</li>
+                        <li><strong>Physically-constrained generative pipelines</strong> — diffusion architectures with
+                            embedded manufacturing constraints for industrial print and packaging workflows</li>
+                        <li><strong>Synthetic media forensics</strong> — adversarial robustness metrics, cross-domain
+                            generalisation, and detection-evasion trade-offs for deepfake identification</li>
+                        <li><strong>Physics-informed generation</strong> — constraint-aware synthesis for CAD/AEC
+                            applications including structural topology and fabrication-aware geometry</li>
+                        <li><strong>Prompt-output alignment</strong> — compositional semantics, attribute binding
+                            accuracy, and spatial relationship preservation in text-to-image systems</li>
+                        <li><strong>Privacy-preserving vision</strong> — federated learning protocols, differential
+                            privacy, and latency-bounded inference for edge deployment</li>
                     </ul>
                 </div>
 
