--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/main.css">
+    <!-- Experimental vibrant theme - REMOVE FOR PRODUCTION -->
+    <link rel="stylesheet" href="styles/about-experimental.css">
 </head>
 
 <body>
