Move Open Call for Collaborations to end of research page

--- a/research.html
+++ b/research.html
@@ -49,26 +49,6 @@
                 welcome collaborations and project proposals from researchers working in these domains.
             </p>
 
-            <!-- Open Call Banner -->
-            <div class="open-call fade-in">
-                <h2>Open Call for Collaborations</h2>
-                <p>
-                    Have a project idea that aligns with our research interests? We are open to collaborating with
-                    researchers, students, and practitioners who want to pitch projects in these areas—and beyond,
-                    as
-                    long as they fall within the broader scope of constrained image synthesis and safety-aligned
-                    generative models.
-                </p>
-                <p>
-                    <strong>To propose a collaboration:</strong> Send a brief project description (1-2 paragraphs)
-                    and
-                    your background to
-                    <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a>
-                </p>
-            </div>
-
-            <hr class="section-divider">
-
             <h2 class="fade-in">Future Research Directions</h2>
 
             <!-- Research Area 1 -->
@@ -161,6 +141,24 @@
                     <span>Model compression</span>
                 </div>
             </article>
+
+            <hr class="section-divider">
+
+            <!-- Open Call Banner -->
+            <div class="open-call fade-in">
+                <h2>Open Call for Collaborations</h2>
+                <p>
+                    Have a project idea that aligns with our research interests? We are open to collaborating with
+                    researchers, students, and practitioners who want to pitch projects in these areas—and beyond,
+                    as long as they fall within the broader scope of constrained image synthesis and safety-aligned
+                    generative models.
+                </p>
+                <p>
+                    <strong>To propose a collaboration:</strong> Send a brief project description (1-2 paragraphs)
+                    and your background to
+                    <a href="mailto:ahujaangadsingh@gmail.com">ahujaangadsingh@gmail.com</a>
+                </p>
+            </div>
 
         </div>
     </main>
