Update Colour Perception Preservation project with new paper details and DOI

--- a/projects.html
+++ b/projects.html
@@ -139,9 +139,14 @@
 
             <!-- Sub-project 3: Colour Perception Preservation -->
             <article class="project fade-in">
-                <h3 class="project__title">Colour Perception Preservation Under Stochastic Generative Processes</h3>
+                <h3 class="project__title">Inference-Time Loss-Guided Colour Preservation in Diffusion Sampling</h3>
                 <p class="project__subtitle">Inference-time constraint enforcement for perceptual colour fidelity
                 </p>
+
+                <div class="project__links">
+                    <a href="https://doi.org/10.13140/RG.2.2.19208.48644" target="_blank" rel="noopener">DOI:
+                        10.13140/RG.2.2.19208.48644</a>
+                </div>
 
                 <div class="project__section">
                     <div class="project__section-title">Problem</div>
@@ -172,14 +177,14 @@
                 <div class="bibtex bibtex--preprint">
                     <div class="bibtex__header">
                         <span class="bibtex__label">Cite this work</span>
-                        <span class="bibtex__status">Pre-print · Not yet published</span>
+                        <span class="bibtex__status">Pre-print · Out now</span>
                     </div>
                     <pre><code>@article{colourperception2025,
-  title={Colour Perception Preservation Under Stochastic Generative Processes},
+  title={Inference-Time Loss-Guided Colour Preservation in Diffusion Sampling},
   author={Ahuja, Angad Singh and Patel, Poorva and Anandh, Aarush Ram},
   journal={arXiv preprint},
   year={2025},
-  note={Pre-print, under review}
+  note={Pre-print, out now}
 }</code></pre>
                 </div>
             </article>
